--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nest start --watch"
+    "start": "node dist/main.js",
+    "build": "tsc",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "dev": "npm run start:dev"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
+    "@tailwindcss/vite": "^4.1.17",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -22,7 +26,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
